--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,13 @@
     <string name="notes_sub_title">Notes Sub Title</string>
     <string name="notes_desc">Enter Note Here</string>
     <string name="web_url">Enter Web Url</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="storage_permission_text">This app needs access to your storage.</string>
     <string name="search">Search your notes</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="button_back">button_back</string>
+    <string name="button_done">button_done</string>
+    <string name="datetime_ymdhis">yyyy-mm-dd hh:i:s</string>
 </resources>
